----------
v1.1.8-git
----------



------
v1.1.7
------

[jan] Update German translation.


------
v1.1.6
------

[mjr] Honor ['content_index']['enabled'] setting (Bug #14345).
[jan] Add Basque translation (Ibon Igartua <ibon.igartua@ehu.eus>).


------
v1.1.5
------

[jan] Add Greek translation (Limperis Antonis <limperis@cti.gr>).
[cjh] Fix error when deleting bookmarks.


------
v1.1.4
------

[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix tag links when tags contain URL special characters.


------
v1.1.3
------

[jan] Update Italian translation.
[mjr] Remove object reference from Content when object is deleted (Bug #14112).


------
v1.1.2
------

[jan] Update Italian translation.
[jan] Update German translation.
[jan] Update Hungarian translation.
[mjr] Fix shebang (after install) for trean scripts (Remi Collet
      <fedora@famillecollet.com>).
[mjr] Use the favicon when returning tag search results via the API if
      possible.


------
v1.1.1
------

[mjr] Fix fatal error due to botched merge.


------
v1.1.0
------

[mjr] Fix creating tags from folder names when importing bookmarks.


---------
v1.1.0RC1
---------

[jan] Add Hungarian translation (Andras Galos <galosa@netinform.hu>).
[jan] Add Danish translation (Erling Preben Hansen <erling@eph.dk>).
[mjr] Add support for importing bookmarks from Mozilla's JSON format.


------
v1.0.3
------

[mjr] Fix some minor issues with crawling bookmarks.
[mjr] Show recently used tags on-demand (Bug #11712).


------
v1.0.2
------

[jan] Fix fatal errors in portal blocks (Bug #12303).


------
v1.0.1
------

[jan] Make Horde_Queue a mandatory dependency.


------
v1.0.0
------

[cjh] Strip utm_ parameters from incoming bookmarks, and provide a script to
      strip them from already-saved bookmarks (Request #10751).
[cjh] Implement listTagInfo and searchTags API calls for Trean (Bug #11816).
[cjh] Fix fetching, saving, and display of favicons.


-----------
v1.0.0beta2
-----------
