@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [jan] SECURITY: Fix open redirects.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -326,7 +326,7 @@
    <package>
     <name>Horde_Core</name>
     <channel>pear.horde.org</channel>
-    <min>2.0.0</min>
+    <min>2.30.0</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
@@ -813,7 +813,7 @@
    <date>2016-12-16</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [jan] SECURITY: Fix open redirects.
    </notes>
   </release>
  </changelog>
