@@ -2,6 +2,7 @@
 v1.1.8-git
 ----------
 
+[jan] SECURITY: Fix open redirects.
 
 
 ------
